Closes #2: Create aggregation for User profile. Added error handling